--- a/self-adaption.html
+++ b/self-adaption.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-	</head>
-	<body>
-		lalala
-	</body>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0"/>
+<title></title>
+<style type="text/css">
+	.box{
+		width: 100%;
+		height: 6.4rem; /* 1500px/234.375=6.4rem */
+		background: #ccc;
+	}
+	.box p{
+		font-size: 12px;
+	}
+</style>
+<script type="text/javascript">
+	function getClientWidth(){ 
+		var cw = document.documentElement.clientWidth; 
+		if(cw > 750){
+			cw =750;
+		}else{
+			document.documentElement.style.setProperty('font-size', cw/3.2+'px', 'important'); 
+		}
+		
+	} 
+	var Timer = null; 
+	window.addEventListener("resize",function() { 
+		clearTimeout(Timer);
+		Timer = setTimeout(getClientWidth, 300);
+	},false); 
+	
+	getClientWidth();
+</script>
+</head>
+<body>
+	<div class="box">
+		<p>每天，个人的身体护理和清洁必不可少，洋萌挑选优质货源为您的生活带来意想不到的舒适。 洗护集选，YMG360多样展示，优质货源，顶尖品牌，消费者的最爱，商家们的主打，你还在等什么，快来YMG360选购吧。</p>
+	</div>
+</body>
 </html>
