--- a/self-adaption.html
+++ b/self-adaption.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<!--meta标签的设置很重要-->
 <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0"/>
 <title></title>
 <style type="text/css">
+/*元素的尺寸按照psd的设计px÷234.375，之后换算成rem，字体的大小可以直接用px来设置*/
 	.box{
 		width: 100%;
 		height: 6.4rem; /* 1500px/234.375=6.4rem */
